<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailActivity">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailActivity">
    <ProgressBar
        android:layout_marginTop="20dp"
        android:id="@+id/event_detail_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="10dp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_launcher_foreground"
            android:id="@+id/iv_detail_event_banner"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"/>
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_detail_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20dp"
            android:text="Roadshow 2019 - Malang"/>
        <TextView
            android:id="@+id/tv_detail_event_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="By "/>
        <RelativeLayout
            android:id="@+id/wrapper_date"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_icon_date"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icons_calendar" />
            <TextView
                android:id="@+id/tv_detail_event_date"
                android:layout_toRightOf="@id/iv_icon_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="20dp"
                android:text="Tue, 20 Mar 2019"/>
            <TextView
                android:id="@+id/tv_detail_event_time"
                android:layout_below="@id/tv_detail_event_date"
                android:layout_alignStart="@id/tv_detail_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:text="18.00 - 20.00 WIB"/>
            <Button
                android:id="@+id/btn_add_to_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:textColor="@color/colorTextButton"
                android:layout_below="@id/tv_detail_event_time"
                android:layout_alignStart="@id/tv_detail_event_time"
                android:text="@string/add_to_calender"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_margin="10dp"
            android:id="@+id/wrapper_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_icon_place"
                android:src="@drawable/icons_marker"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:id="@+id/tv_detail_event_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/iv_icon_place"
                android:text="Co Working Space"/>
            <TextView
                android:id="@+id/tv_detail_event_street_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_event_place"
                android:layout_alignStart="@id/tv_detail_event_place"
                android:textColor="@color/colorSecondaryText"
                android:text="Jl. hdjkashdjkashdajks"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrapper_ticket"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_icon_ticket"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icons_ticket"/>
            <TextView
                android:id="@+id/tv_detail_event_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorPrimaryText"
                android:layout_toEndOf="@id/iv_icon_ticket"
                android:text="Free"/>
            <TextView
                android:id="@+id/tv_detail_event_price_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_event_price"
                android:layout_alignStart="@id/tv_detail_event_price"
                android:textColor="@color/colorSecondaryText"
                android:text="On Loket"/>
        </RelativeLayout>
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:background="#EEEEEE"
            android:layout_height="2dp"/>

        <TextView
            android:id="@+id/tv_detail_event_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/about"/>
        <TextView
            android:id="@+id/tv_detail_event_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/dummy_about_text"
            />
        <Button
            android:id="@+id/btn_read_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="@color/colorTextButton"
            android:text="Read More"/>
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:background="#EEEEEE"
            android:layout_height="2dp"/>
        <TextView
            android:id="@+id/tv_detail_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/location"/>
        <ImageView
            android:id="@+id/iv_detail_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />
        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:background="#EEEEEE"
            android:layout_height="2dp"/>
        <TextView
            android:id="@+id/tv_detail_event_organizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/organizer"/>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_organizer_logo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:padding="10dp"
                android:background="@drawable/circle"
                android:src="@drawable/logo_loket"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"
                android:text="LOKET"/>
        </LinearLayout>
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/tv_detail_event_organizer_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/dummy_organizer_text"/>
        <Button
            android:id="@+id/btn_organizer"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textColor="@color/colorTextButton"
            android:text="@string/organizer_detail"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btn_facebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerInside"
                android:background="@android:color/transparent"
                android:src="@drawable/icons_facebook"/>
            <ImageButton
                android:id="@+id/bnt_twitter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:scaleType="centerInside"
                android:layout_toEndOf="@id/btn_facebook"
                android:background="@android:color/transparent"
                android:src="@drawable/icons_twitter"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/follow"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rectangle"
                android:textAllCaps="false"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>